# test_project

./: .gitignore  pyproject.toml
src/config/: DTO.py  base_api.py  base_repositori.py  containers.py  serializers.py  settings.py  urls.py
src/revenue/: interactors.py  interfaces.py  models.py  repositories.py  services.py  urls.py  views.py
src/revenue/migrations/: 0001_initial.py
src/spend/: interactors.py  interfaces.py  repositories.py  services.py  urls.py  views.py
src/spend/migrations/: 0001_initial.py
